--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,14 @@
-[package]
-name = "booent"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = [
+  "apps/api",
+  "crates/auth",
+  "crates/hotels",
+  "crates/inventory",
+  "crates/bookings",
+  "crates/billing",
+  "crates/search",
+  "crates/admin",
+  "crates/common"
+]
 
-[dependencies]
-actix-web = "4"
-actix-cors = "0.7"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tokio = { version = "1", features = ["full"] }
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
-uuid = { version = "1", features = ["v4"] }
-dotenvy = "0.15"
-chrono = { version = "0.4", features = ["serde"] }
+resolver = "2"
