--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 config = "0.14"
 serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
+url = "2"
